# auditapp

./: .gitignore  NEW_FEATURES.md  README.md  app.py  dcmmetatest_plus.py  pyproject.toml  requirements.txt  test_normalizer.py
.github/workflows/: ci.yml  smoke.yml
dcmmetatest_plus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: registry_builder_v1.yaml
src/dcmmetatest/: __init__.py  analyzer.py  anonymizer.py  augmentations.py  cli.py  config_generator.py  detectors.py  image_processor.py  io.py  models.py  normalizer.py  registry.py  split.py  ui.py  ui_entrypoint.py  utils.py  validation.py  viewer.py
src/dcmmetatest/services/: __init__.py  experiment.py  intake.py  manifest.py  pipeline.py  split.py
tests/: test_dcmmetatest.py  test_image_processor.py  test_import_smoke.py  test_pipeline_integration.py  test_registry_builder.py  test_streamlit_smoke.py  test_ui_exports.py  test_validation.py
tests/smoke/: test_minimal_viability.py
